# AI-Product-Hack-2024-Case-13

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tox.ini
.github/workflows/: tests.yml
sql/: example_startup.sql
src/entrypoint/: api_ui.py  entrypoint.py  telegram_ui.py
src/presentation/: button_texts.py  message_texts.py  telegram_bot.py  test_data.py
src/service/: __init__.py  service_assembler.py  version.py
src/service/custom_typing/: __init__.py  model_info_type.py  user_type.py
src/service/custom_typing/endpoint_types/: __init__.py  generic_response_type.py  ping_response_body_type.py  success_response_body_type.py  tag_titles_response_type.py  user_ranking_response_body_type.py
src/service/data_formatting/: __init__.py  data_formatting_controller.py
src/service/data_formatting/file_parsers/: __init__.py  file_parser.py  json_file_parser.py  parsing_methods.py  pdf_file_parser.py
src/service/data_formatting/parsers/: __init__.py  parsing_methods.py
src/service/database_interaction/: __init__.py  database_controller.py
src/service/database_interaction/orm_models/: __init__.py  categories.py  events.py  ranking_requests.py  tags.py  users.py  users_events.py  users_tags.py
src/service/database_interaction/repositories/: __init__.py  category_repository.py  event_repository.py  ranking_request_repository.py  tag_repository.py  user_repository.py
src/service/entities/: user.py
src/service/models/ranking/: __init__.py  cosine_ranking_model.py
src/service/models/tag_generation/: __init__.py  (+1 more)
(+58 files in other folders)
